--- a/mc-dep.yaml
+++ b/mc-dep.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: promc
-          image: memecached
+          image: memcached
           ports:
             - name: promc-port
               containerPort: 11211
